# This file is part of lwoniom.
# SPDX-Identifier: LGPL-3.0-or-later
#
# lwoniom is free software: you can redistribute it and/or modify it under
# the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# lwoniom is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with lwoniom.  If not, see <https://www.gnu.org/licenses/>.

option(
  'la_backend',
  type: 'combo',
  value: 'custom',
  yield: true,
  choices: ['mkl', 'mkl-rt', 'mkl-static', 'openblas', 'netlib', 'custom'],
  description: 'Linear algebra backend for program.',
)
option(
  'custom_libraries',
  type: 'array',
  value: [],
  description: 'libraries to load for custom linear algebra backend',
)
option(
  'openmp',
  type: 'boolean',
  value: false,
  yield: true,
  description: 'use OpenMP parallelisation',
)
option(
  'WITH_TOMLF',
  type: 'boolean',
  value: true,
  description: 'build with toml-f, a fortran parser for .toml files',
)
option(
  'build_exe',
  type: 'boolean',
  value: true,
  description: 'build the app binary',
)

option(
  'build_test',
  type: 'boolean',
  value: true,
  description: 'build the tester binary',
)

